Focusing wrench tab on forums manager now slides out the buttons. Useful on touch interfaces
Added to the help for the 'Share To Online DB' button 
Added DST adjustment to post dates
Added notifications settings 'Open Subscriptions/PMs Window Automatically On Open Forum' and subsetting 'If Both Subs and PMs, Open Subs Window Instead' and updated help

*** 1.4.0 ***

Added advanced settings option 'Show Traceback Dialog On Errors' - mostly for testing on my android phone

*** 1.3.9 ***

Improved titles (when available) for post videos in full message view

*** 1.3.8 ***

Added forum setting 'Time Offset' which allows you to set a time offset in hours to correct displayed time being offset from your local time. Currently works with Tapatalk for user activity and post time
Fixed a bug causing errors when trying to edit a post

*** 1.3.7 ***

Changed 'Search User Posts' button to 'Search User'
Added '[Recent Posts]' and '[Recent Threads]' to search options on 'Search User'
Finally fixed (hopefully) the daylight savings time handling code for user activity display
Show last seen time instead of activity if user not online
Show last activity time for online users even if no activity text available.
Fix for forum manager night always highlighting the correct forum on open
Logo and logo background color now update in forums manager when changed in forum settings
Logo and header color now update in forums window when changed in forum settings and forums manager is closed
Fix: Some forums (notably XBMC.org) weren't getting last post user data because they used a different key name for the value
Known Issue: xbmc.org (and probably some other mybb forums) show the last poster as the starter. This is a bug in the forums Tapatalk plugin (that means not Forum Browser =] )

*** 1.3.6 ***

Swapped 'Forums' and 'Settings' buttons
Moved some functions out of the default.py file to their own modules. Hopefully I didn't break anything